bug squashing and other things

--- a/static/style.css
+++ b/static/style.css
@@ -9,8 +9,8 @@
   color: #dd7016;
 }
 
-.debugpage {
-
+#example {
+    word-wrap: break-word;
 }
 
 #border {
